# task_app

./: README.md  docker-compose.yaml  env.example  nginx.conf  pyproject.toml
backend/: Dockerfile  alembic.ini  api.py  config.py  database.py  env.example  main.py  package-lock.json  pyproject.toml  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 510a3db55ccb_init_tables.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: Home.vue
nginx/: Dockerfile  nginx.conf
